--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/list-bottled-wines-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/list-bottled-wines-view.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.operator.ListBottledWinesController">
     <TableView fx:id="bottledWinesTable" prefHeight="400.0" prefWidth="600.0">
@@ -11,10 +10,22 @@
             <TableColumn fx:id="wineNameColumn" prefWidth="150.0" text="Wine name" />
             <TableColumn fx:id="bottleVolumeColumn" prefWidth="75.0" text="Volume (ml)" />
             <TableColumn fx:id="quantityColumn" prefWidth="75.0" text="Quantity" />
+            <TableColumn fx:id="bottledWineDateColumn" prefWidth="100.0" text="Date Produced" />
          <TableColumn fx:id="warehouseColumn" prefWidth="156.20001220703125" text="Warehouse" />
         </columns>
         <VBox.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
         </VBox.margin>
     </TableView>
+    <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-background-color: #f0f0f0;">
+        <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+        </padding>
+        <Label text="Search for period from:" />
+        <DatePicker fx:id="startDatePicker" prefWidth="120.0" promptText="Begin" />
+        <Label text="to:" />
+        <DatePicker fx:id="endDatePicker" prefWidth="120.0" promptText="End" />
+        <Button mnemonicParsing="false" onAction="#onSearchClick" text="Search" />
+        <Button mnemonicParsing="false" onAction="#onClearClick" text="Clear" />
+    </HBox>
 </VBox>
