bottling logic fixed and critical limit alerts added

--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host/check-inventory-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host/check-inventory-view.fxml
@@ -13,7 +13,8 @@
                     <TableColumn fx:id="warehouseIdColumn" prefWidth="40.0" style="-fx-background-color: #BDCE8E; -fx-border-color: white;" text="ID" />
                     <TableColumn fx:id="warehouseTypeColumn" prefWidth="140.0" style="-fx-background-color: #BDCE8E; -fx-border-color: white;" text="Type" />
                     <TableColumn fx:id="warehouseNameColumn" prefWidth="180.0" style="-fx-background-color: #BDCE8E; -fx-border-color: white;" text="Name" />
-                    <TableColumn fx:id="warehouseAddressColumn" prefWidth="200.0" style="-fx-background-color: #BDCE8E; -fx-border-color: white;" text="Address" />
+                    <TableColumn fx:id="warehouseAddressColumn" prefWidth="182.0" style="-fx-background-color: #BDCE8E; -fx-border-color: white;" text="Address" />
+                    <TableColumn fx:id="warehouseLimitColumn" style="-fx-background-color: #BDCE8E; -fx-border-color: white;" text="Limit" />
                 </columns>
             </TableView>
         </Tab>
