--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/bottle-wines-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/bottle-wines-view.fxml
@@ -6,8 +6,9 @@
 
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.operator.BottleWinesController">
     <HBox alignment="CENTER" prefHeight="45.0" prefWidth="600.0" spacing="20.0">
-        <ComboBox fx:id="wineComboBox" prefHeight="26.0" prefWidth="173.0" promptText="Choose wine to bottle..." style="-fx-background-color: #FFF5F5;" />
-        <ComboBox fx:id="bottledWineWarehouseComboBox" prefHeight="26.0" prefWidth="216.0" promptText="Choose warehouse for storing..." style="-fx-background-color: #FFF5F5;" />
+      <children>
+           <ComboBox fx:id="wineComboBox" prefHeight="26.0" prefWidth="173.0" promptText="Choose wine to bottle..." style="-fx-background-color: #FFF5F5;" />
+      </children>
     </HBox>
     <HBox alignment="CENTER" prefHeight="295.0" prefWidth="600.0" spacing="20.0">
         <TableView fx:id="bottledWinesTable" prefHeight="262.0" prefWidth="247.0">
@@ -23,8 +24,8 @@
             <HBox.margin>
                 <Insets top="20.0" />
             </HBox.margin>
+           <ComboBox fx:id="bottledWineWarehouseComboBox" prefHeight="26.0" prefWidth="216.0" promptText="Choose warehouse for storing..." style="-fx-background-color: #FFF5F5;" />
             <ComboBox fx:id="bottleWarehouseComboBox" prefHeight="26.0" prefWidth="186.0" promptText="Choose bottle warehouse..." style="-fx-background-color: white;" />
-            <ComboBox fx:id="grapeWarehouseComboBox" prefHeight="26.0" prefWidth="188.0" promptText="Choose grape warehouse..." style="-fx-background-color: white;" />
             <Button mnemonicParsing="false" onAction="#onBottleWineClick" style="-fx-background-color: #B07FD1;" text="Bottle Wine" textFill="WHITE" />
         </VBox>
     </HBox>
