--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/list-wines-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/list-wines-view.fxml
@@ -6,19 +6,17 @@
 <?import javafx.scene.text.*?>
 
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.operator.ListWinesController">
-    <TableView fx:id="winesTable" prefHeight="400.0" prefWidth="600.0">
+    <TableView fx:id="winesTable" prefHeight="342.0" prefWidth="270.0">
       <columns>
-          <TableColumn fx:id="wineNameColumn" prefWidth="150.0" text="Wine name" />
-          <TableColumn fx:id="editColumn" prefWidth="75.0" text="Edit" />
-          <TableColumn fx:id="deleteColumn" prefWidth="75.0" text="Delete" />
+          <TableColumn fx:id="wineNameColumn" prefWidth="214.3999786376953" text="Wine name" />
       </columns>
         <VBox.margin>
-          <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
+          <Insets bottom="10.0" left="200.0" right="200.0" top="40.0" />
         </VBox.margin>
     </TableView>
    <Label text="Double click -&gt; opens grape information">
       <VBox.margin>
-         <Insets bottom="10.0" />
+         <Insets bottom="30.0" />
       </VBox.margin>
       <font>
          <Font name="System Bold Italic" size="12.0" />
