--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/admin/register-user-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/admin/register-user-view.fxml
@@ -23,11 +23,11 @@
          <Insets left="40.0" right="40.0" />
       </VBox.margin>
    </TextField>
-   <TextField fx:id="passwordTextField" promptText="Password">
+   <PasswordField fx:id="passwordTextField" promptText="Password">
       <VBox.margin>
          <Insets left="40.0" right="40.0" />
       </VBox.margin>
-   </TextField>
+   </PasswordField>
    <HBox alignment="CENTER" prefHeight="30.0" prefWidth="320.0">
       <VBox.margin>
          <Insets left="20.0" right="20.0" />
