--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/login/main-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/login/main-view.fxml
@@ -16,8 +16,7 @@
       </font>
    </Label>
    <TextField fx:id="usernameTextField" promptText="Username" />
-   <TextField fx:id="passwordTextField" promptText="Password" />
-
+   <PasswordField fx:id="passwordTextField" promptText="Password" />
           <Button defaultButton="true" ellipsisString="" onAction="#onLogInButtonClick" style="-fx-background-color: #a40a0a;" text="Log in" textFill="#ffecec">
       <font>
          <Font name="SansSerif Regular" size="12.0" />
