--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/bottle-wines-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/bottle-wines-view.fxml
@@ -6,14 +6,13 @@
 
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.operator.BottleWinesController">
     <HBox alignment="CENTER" prefHeight="45.0" prefWidth="600.0" spacing="20.0">
-        <ComboBox fx:id="wineComboBox" prefHeight="26.0" prefWidth="173.0" promptText="Choose wine to bottle..."
-                  style="-fx-background-color: #FFF5F5;"/>
+        <ComboBox fx:id="wineComboBox" prefHeight="26.0" prefWidth="173.0" promptText="Choose wine to bottle..." style="-fx-background-color: #FFF5F5;" />
     </HBox>
     <HBox alignment="CENTER" prefHeight="295.0" prefWidth="600.0" spacing="20.0">
         <TableView fx:id="bottledWinesTable" prefHeight="262.0" prefWidth="247.0">
           <columns>
-              <TableColumn fx:id="bottleVolumeColumn" prefWidth="91.19999694824219" text="Bottle Volume" />
-              <TableColumn fx:id="quantityColumn" prefWidth="75.0" text="Quantity" />
+              <TableColumn fx:id="bottleVolumeColumn" prefWidth="117.00000876188278" text="Bottle Volume" />
+              <TableColumn fx:id="quantityColumn" prefWidth="125.20001220703125" text="Quantity" />
           </columns>
           <HBox.margin>
               <Insets top="20.0" />
